--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
     "framer-motion": "^12.7.4",
+    "firebase-admin": "^13.2.0",
     "jotai": "^2.12.3",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
