--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jotai": "^2.12.3",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "jotai": "^2.12.3",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
