--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jotai": "^2.12.3",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
