--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
     "jotai": "^2.12.3",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
