--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
-    "framer-motion": "^12.7.4",
     "firebase-admin": "^13.2.0",
+    "framer-motion": "^12.7.4",
     "jotai": "^2.12.3",
+    "jspdf": "^3.0.1",
+    "langchain": "^0.3.23",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
