--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "node-latex": "^3.1.0",
+    "node-pdflatex": "^0.3.0",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
